--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "@braintree/sanitize-url": "7.0.2",
     "refractor": {
       "prismjs": "^1.30.0"
-    }
+    },
+    "nth-check": "^2.1.1",
+    "postcss": "8.4.31"
   },
   "scripts": {
     "start": "craco start",
